<resources>
    <string name="app_name">IMCTable</string>

    <string-array name="title_tabs">
        <item>Criança</item>
        <item>Adulto</item>
        <item>Idoso</item>
    </string-array>

    <!--strings das telas -->
    <string name="str_top">Preencha os campos abaixos!</string>
    <string name="action_settings">Settings</string>
    <string name="name_button">Limpar</string>
    <string name="name_calc">Calcular</string>

    <!--aplication IMC crianca activity2 -->
    <string name="app_crianca">IMC para Criança</string>
    <!---aplicatiob para oldman-->
    <string name="oldman">IMC para Idoso</string>

    <!--strings msg_alert-->
    <string name="msg_alert_alt">Preencha o campo Altura !</string>
    <string name="msg_alert_peso">Preencha o campo Peso !</string>
    <string name="peso_kg">Peso (Kg)</string>
    <string name="altura_m">Altura (M²)</string>
    <string name="calcular">Calcular</string>
    <string name="limpar">Limpar</string>
    <string name="sexo">Sexo:</string>
    <string name="idade">Idade:</string>
    <string name="digite_sua_idade">Digite sua Idade</string>
    <string name="homem">Homem</string>
    <string name="mulher">Mulher</string>
    <string name="menu_duvidas">Duvidas</string>
    <string name="menu_copyright">Copyright</string>
    
    
    <string name="copy">
        <![CDATA[<h3><b>DÚVIDAS SOBRE O IMC</b></h3>
            <p><b>O que significa IMC ? </b></p>IMC é uma sigla utilizada para Índice de Massa Corporal, que é uma medida utilizada para medir a obesidade.
            <p><b>Como fazer o cálculo do IMC ? </b></p>O cálculo do IMC é feito dividindo o peso (em quilogramas) pela altura (em metros) ao quadrado.
            <p><b>O IMC é o mesmo para crianças e adultos ?  </b></p>Não. Para crianças e adolescentes (de 6 a 15 anos), o cálculo do IMC obedece essa outra tabela.
            <i><a href="http://guiafeminina.com.br/peso-ideal-para-sua-altura/">Veja..</i></a>
            <p><b><i>Obs: Na tela anterior temos o cálculo para crianças.</i></b></p>
            <p><b>Quais são as limitações do IMC ? </b></p>O IMC pode apresentar alterações, dependendo de fatores como a prática de exercícios físicos.
            <p><b>O cálculo do IMC é diferente para mulheres e homens ? </b></p>Não, o IMC se calcula igual para homens e mulheres.
            <p><i><b>Advertência:</b></i> <a href="http://indicedemassacorporal.com/imc-calculo.html">Leia....</a></p>

    ]]>
    </string>
    <string name="page1"><![CDATA[O IMC é importante para sabermos os limites de obesidade,
                            magresa e sobrepeso. Mas serve principalmente como um marcador de
                            prevenção de doenças cardiovasculares. ]]></string>
    <string name="page2_string1">Este aplicativo faz cálculos para crianças, jovens, adultos e idosos!</string>
    <string name="page2_string2">Ter um indice de massa corporal saudável, é importante na prevenção do Infarto, AVC, e do Derrame !</string>


</resources>
