<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.ramonlopes.imctable.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/submit"
            android:layout_width="155dp"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:elevation="0dp"
            android:text="@string/calcular"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnclear"
            android:layout_width="155dp"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:elevation="0dp"
            android:text="@string/limpar"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtcabecalho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/str_top"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/imgAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edt1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/edt1"
            android:src="@drawable/couple_50pd" />

        <ImageView
            android:id="@+id/imgPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView"
            android:layout_alignEnd="@+id/imgAltura"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/imgAltura"
            android:layout_alignTop="@+id/edt2"
            android:src="@drawable/peso_50pd" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edt2"
            android:layout_marginTop="49dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/sexo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/texidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radioGroup"
            android:layout_marginTop="49dp"
            android:text="@string/idade"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edt2"
            android:layout_alignStart="@+id/edt2"
            android:layout_below="@+id/edt2"
            android:layout_marginTop="33dp"
            android:orientation="vertical"
            android:layout_toLeftOf="@+id/btnclear"
            android:layout_toStartOf="@+id/btnclear">

            <RadioButton
                android:id="@+id/radioMen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/homem" />

            <RadioButton
                android:id="@+id/radiowoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="11dp"
                android:checked="true"
                android:layout_marginRight="11dp"
                android:text="@string/mulher" />
        </RadioGroup>

        <EditText
            android:id="@+id/edt1"
            style="@style/EditTextStyle"
            android:layout_width="172dp"
            android:layout_height="49dp"
            android:layout_marginTop="40dp"
            android:hint="@string/altura_m"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:layout_below="@+id/txtcabecalho"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/edt2"
            style="@style/EditTextStyle"
            android:layout_width="172dp"
            android:layout_height="49dp"
            android:layout_marginTop="24dp"
            android:hint="@string/peso_kg"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:layout_below="@+id/edt1"
            android:layout_alignLeft="@+id/edt1"
            android:layout_alignStart="@+id/edt1" />

        <EditText
            android:id="@+id/editIdade"
            style="@style/EditTextStyle"
            android:layout_width="172dp"
            android:layout_height="49dp"
            android:hint="@string/digite_sua_idade"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:layout_alignBaseline="@+id/texidade"
            android:layout_alignBottom="@+id/texidade"
            android:layout_alignLeft="@+id/radioGroup"
            android:layout_alignStart="@+id/radioGroup" />
    </RelativeLayout>
</RelativeLayout>

