<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.ramonlopes.imctable.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/butCalc"
            android:layout_width="155dp"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:elevation="0dp"
            android:text="@string/name_calc"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLimp"
            android:layout_width="155dp"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:elevation="0dp"
            android:text="@string/name_button"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtText"
            android:layout_width="172dp"
            android:layout_height="49dp"
            android:layout_marginTop="58dp"
            android:hint="@string/peso_kg"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:layout_below="@+id/edtAlt"
            android:layout_alignLeft="@+id/txtcabecalho"
            android:layout_alignStart="@+id/txtcabecalho" />

        <EditText
            android:id="@+id/edtAlt"
            android:layout_width="172dp"
            android:layout_height="49dp"
            android:layout_marginTop="45dp"
            android:hint="@string/altura_m"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:layout_below="@+id/txtcabecalho"
            android:layout_alignLeft="@+id/edtText"
            android:layout_alignStart="@+id/edtText" >
            <requestFocus/>
        </EditText>

        <TextView
            android:id="@+id/txtcabecalho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/str_top"
            android:textColor="@color/Black"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/imgAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edtText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/edtAlt"
            android:src="@drawable/elderly_person" />

        <ImageView
            android:id="@+id/imgPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edtText"
            android:layout_alignEnd="@+id/imgAltura"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/imgAltura"
            android:layout_alignTop="@+id/edtText"
            android:src="@drawable/peso_50pd" />
    </RelativeLayout>

</RelativeLayout>

